--- a/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -104,7 +104,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che.v7.90.0-877.next
+  name: eclipse-che.v7.90.0-878.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -225,7 +225,7 @@ spec:
             path: cheVersion
             x-descriptors:
               - urn:alm:descriptor:text
-          - description: The public URL of the internal devfile registry.
+          - description: Deprecated the public URL of the internal devfile registry.
             displayName: Devfile registry URL
             path: devfileRegistryURL
             x-descriptors:
@@ -916,6 +916,8 @@ spec:
                           {"image": "quay.io/devfile/universal-developer-image:ubi8-latest"}}]'
                       - name: CHE_DEFAULT_SPEC_COMPONENTS_PLUGINREGISTRY_OPENVSXURL
                         value: https://open-vsx.org
+                      - name: CHE_DEFAULT_SPEC_COMPONENTS_DEVFILEREGISTRY_EXTERNAL_DEVFILE_REGISTRIES
+                        value: '[{"url": "https://registry.devfile.io"}]'
                       - name: CHE_DEFAULT_SPEC_DEVENVIRONMENTS_DISABLECONTAINERBUILDCAPABILITIES
                         value: "false"
                       - name: CHE_DEFAULT_SPEC_DEVENVIRONMENTS_CONTAINERSECURITYCONTEXT
@@ -1033,7 +1035,7 @@ spec:
   minKubeVersion: 1.19.0
   provider:
     name: Eclipse Foundation
-  version: 7.90.0-877.next
+  version: 7.90.0-878.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
