chore: Removes plugin-registry deployment component (#1876)
* chore: Remove plugin-registry deployment and related kubernetes resources

--- a/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -104,7 +104,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che.v7.89.0-876.next
+  name: eclipse-che.v7.90.0-878.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -112,10 +112,9 @@ spec:
     owned:
       - description: 'The `CheCluster` custom resource allows defining and managing
           Eclipse Che server installation. Based on these settings, the  Operator
-          automatically creates and maintains several ConfigMaps: `che`, `plugin-registry`,
-          `devfile-registry` that will contain the appropriate environment variables
-          of the various components of the installation. These generated ConfigMaps
-          must NOT be updated manually.'
+          automatically creates and maintains several ConfigMaps: `che`, `plugin-registry`
+          that will contain the appropriate environment variables of the various components
+          of the installation. These generated ConfigMaps must NOT be updated manually.'
         displayName: Eclipse Che instance Specification
         kind: CheCluster
         name: checlusters.org.eclipse.che
@@ -226,7 +225,7 @@ spec:
             path: cheVersion
             x-descriptors:
               - urn:alm:descriptor:text
-          - description: The public URL of the internal devfile registry.
+          - description: Deprecated the public URL of the internal devfile registry.
             displayName: Devfile registry URL
             path: devfileRegistryURL
             x-descriptors:
@@ -881,8 +880,6 @@ spec:
                         value: quay.io/eclipse/che-dashboard:next
                       - name: RELATED_IMAGE_plugin_registry
                         value: quay.io/eclipse/che-plugin-registry:next
-                      - name: RELATED_IMAGE_devfile_registry
-                        value: quay.io/eclipse/che-devfile-registry:next
                       - name: RELATED_IMAGE_che_tls_secrets_creation_job
                         value: quay.io/eclipse/che-tls-secret-creator:alpine-01a4c34
                       - name: RELATED_IMAGE_single_host_gateway
@@ -919,6 +916,8 @@ spec:
                           {"image": "quay.io/devfile/universal-developer-image:ubi8-latest"}}]'
                       - name: CHE_DEFAULT_SPEC_COMPONENTS_PLUGINREGISTRY_OPENVSXURL
                         value: https://open-vsx.org
+                      - name: CHE_DEFAULT_SPEC_COMPONENTS_DEVFILEREGISTRY_EXTERNAL_DEVFILE_REGISTRIES
+                        value: '[{"url": "https://registry.devfile.io"}]'
                       - name: CHE_DEFAULT_SPEC_DEVENVIRONMENTS_DISABLECONTAINERBUILDCAPABILITIES
                         value: "false"
                       - name: CHE_DEFAULT_SPEC_DEVENVIRONMENTS_CONTAINERSECURITYCONTEXT
@@ -1036,7 +1035,7 @@ spec:
   minKubeVersion: 1.19.0
   provider:
     name: Eclipse Foundation
-  version: 7.89.0-876.next
+  version: 7.90.0-878.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
