--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -4029,7 +4029,7 @@ spec:
           description: |-
             The `CheCluster` custom resource allows defining and managing Eclipse Che server installation.
             Based on these settings, the  Operator automatically creates and maintains several ConfigMaps:
-            `che`, `plugin-registry`, `devfile-registry` that will contain the appropriate environment variables
+            `che`, `plugin-registry` that will contain the appropriate environment variables
             of the various components of the installation. These generated ConfigMaps must NOT be updated manually.
           properties:
             apiVersion:
@@ -4628,7 +4628,7 @@ spec:
                         used by the Che installation.
                       properties:
                         deployment:
-                          description: Deployment override options.
+                          description: Deprecated deployment override options.
                           properties:
                             containers:
                               description: List of containers belonging to the pod.
@@ -8338,7 +8338,7 @@ spec:
                   description: Currently installed Che version.
                   type: string
                 devfileRegistryURL:
-                  description: The public URL of the internal devfile registry.
+                  description: Deprecated the public URL of the internal devfile registry.
                   type: string
                 gatewayPhase:
                   description: Specifies the current phase of the gateway deployment.
