--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -7028,6 +7028,14 @@ spec:
                       PersistUserHome defines configuration options for persisting the
                       user home directory in workspaces.
                     properties:
+                      disableInitContainer:
+                        description: |-
+                          Determines whether the init container that initializes the persistent home directory should be disabled.
+                          When the `/home/user` directory is persisted, the init container is used to initialize the directory before
+                          the workspace starts. If set to true, the init container will not be created.
+                          This field is not used if the `workspace.persistUserHome.enabled` field is set to false.
+                          Enabled by default.
+                        type: boolean
                       enabled:
                         description: |-
                           Determines whether the user home directory in workspaces should persist between
