--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -7059,7 +7059,7 @@ spec:
                             Determines whether the init container that initializes the persistent home directory should be disabled.
                             When the `/home/user` directory is persisted, the init container is used to initialize the directory before
                             the workspace starts. If set to true, the init container will not be created.
-                            This field is not used if the `workspace.persistUserHome.enabled` field is set to false.
+                            This field is not used if the `devEnvironments.persistUserHome.enabled` field is set to false.
                             Enabled by default.
                           type: boolean
                         enabled:
