--- a/bundle/stable/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/stable/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -4029,7 +4029,7 @@ spec:
           description: |-
             The `CheCluster` custom resource allows defining and managing Eclipse Che server installation.
             Based on these settings, the  Operator automatically creates and maintains several ConfigMaps:
-            `che`, `plugin-registry`, `devfile-registry` that will contain the appropriate environment variables
+            `che`, `plugin-registry` that will contain the appropriate environment variables
             of the various components of the installation. These generated ConfigMaps must NOT be updated manually.
           properties:
             apiVersion:
@@ -4628,7 +4628,7 @@ spec:
                         used by the Che installation.
                       properties:
                         deployment:
-                          description: Deployment override options.
+                          description: Deprecated deployment override options.
                           properties:
                             containers:
                               description: List of containers belonging to the pod.
@@ -7054,6 +7054,15 @@ spec:
                         PersistUserHome defines configuration options for persisting the
                         user home directory in workspaces.
                       properties:
+                        disableInitContainer:
+                          description: |-
+                            Determines whether the init container that initializes the persistent home directory should be disabled.
+                            When the `/home/user` directory is persisted, the init container is used to initialize the directory before
+                            the workspace starts. If set to true, the init container will not be created.
+                            Disabling the init container allows home persistence to be initialized by the entrypoint present in the workspace's first container component.
+                            This field is not used if the `devEnvironments.persistUserHome.enabled` field is set to false.
+                            The init container is enabled by default.
+                          type: boolean
                         enabled:
                           description: |-
                             Determines whether the user home directory in workspaces should persist between
@@ -8338,7 +8347,7 @@ spec:
                   description: Currently installed Che version.
                   type: string
                 devfileRegistryURL:
-                  description: The public URL of the internal devfile registry.
+                  description: Deprecated the public URL of the internal devfile registry.
                   type: string
                 gatewayPhase:
                   description: Specifies the current phase of the gateway deployment.
