--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -85,3 +85,5 @@ entries:
     replaces: eclipse-che.v7.87.0
   - name: eclipse-che.v7.89.0
     replaces: eclipse-che.v7.88.0
+  - name: eclipse-che.v7.90.0
+    replaces: eclipse-che.v7.89.0
