--- a/.github/workflows/release-next-catalog-and-operator-image.yaml
+++ b/.github/workflows/release-next-catalog-and-operator-image.yaml
@@ -78,8 +78,11 @@ jobs:
           registry: quay.io
       - name: Build catalog source
         run: |
-          ${GITHUB_WORKSPACE}/build/scripts/release/editors-definitions.sh update-manager-yaml --yaml-path ${GITHUB_WORKSPACE}/config/manager/manager.yaml
-          ${GITHUB_WORKSPACE}/build/scripts/release/samples.sh update-manager-yaml --yaml-path ${GITHUB_WORKSPACE}/config/manager/manager.yaml
+          ${GITHUB_WORKSPACE}/build/scripts/release/editors-definitions.sh update-manager-yaml \
+            --yaml-path ${GITHUB_WORKSPACE}/config/manager/manager.yaml
+          ${GITHUB_WORKSPACE}/build/scripts/release/samples.sh update-manager-yaml \
+            --yaml-path ${GITHUB_WORKSPACE}/config/manager/manager.yaml \
+            --index-json-url "https://raw.githubusercontent.com/eclipse-che/che-dashboard/main/packages/devfile-registry/air-gap/index.json"
           make update-dev-resources
           ${GITHUB_WORKSPACE}/build/scripts/release/addDigests.sh -s $(make csv-path CHANNEL=next) -t next
           ${GITHUB_WORKSPACE}/build/scripts/olm/release-catalog.sh \
