--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -87,3 +87,5 @@ entries:
     replaces: eclipse-che.v7.88.0
   - name: eclipse-che.v7.90.0
     replaces: eclipse-che.v7.89.0
+  - name: eclipse-che.v7.91.0
+    replaces: eclipse-che.v7.90.0
