--- a/bundle/next/eclipse-che/metadata/annotations.yaml
+++ b/bundle/next/eclipse-che/metadata/annotations.yaml
@@ -27,3 +27,5 @@ annotations:
   operators.operatorframework.io.test.config.v1: tests/scorecard/
 
   com.redhat.openshift.versions: "v4.8"
+
+  com.redhat.openshift.versions: "v4.8"
