--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -37,14 +37,14 @@ jobs:
     - name: Checkout source code
       uses: actions/checkout@v3
     - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
+      uses: docker/setup-qemu-action@v3
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      uses: docker/setup-buildx-action@v3
     - name: Build images
       uses: docker/build-push-action@v3
       with:
         file: Dockerfile
-        platforms: linux/amd64,linux/ppc64le
+        platforms: linux/amd64,linux/ppc64le,linux/arm64
         tags: quay.io/eclipse/che-operator:next
   source-code-validation:
     runs-on: ubuntu-22.04
