--- a/.github/workflows/release-next-catalog-and-operator-image.yaml
+++ b/.github/workflows/release-next-catalog-and-operator-image.yaml
@@ -30,9 +30,9 @@ jobs:
       - name: Install yq
         run: sudo pip install yq
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
       - name: Login to quay.io
         uses: docker/login-action@v2
         with:
@@ -43,7 +43,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           file: Dockerfile
-          platforms: linux/amd64,linux/ppc64le
+          platforms: linux/amd64,linux/ppc64le,linux/arm64
           push: true
           tags: quay.io/eclipse/che-operator:next
   build-catalog:
