--- a/deploy/deployment/openshift/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/openshift/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -5164,6 +5164,18 @@ spec:
                     pvcStrategy: per-user
                 description: Development environment default configuration options.
                 properties:
+                  allowedSource:
+                    description: AllowedSource defines the allowed sources on which
+                      workspaces can be started.
+                    properties:
+                      urls:
+                        description: |-
+                          The list of approved URLs for starting Cloud Development Environments (CDEs). CDEs can only be
+                          initiated from these URLs.
+                        items:
+                          type: string
+                        type: array
+                    type: object
                   containerBuildConfiguration:
                     description: Container build configuration.
                     properties:
