feat: implement devEnvironments.runtimeClassName field
Signed-off-by: admin <dakwon@redhat.com>

--- a/deploy/deployment/kubernetes/combined.yaml
+++ b/deploy/deployment/kubernetes/combined.yaml
@@ -7262,6 +7262,10 @@ spec:
                             type: object
                         type: object
                     type: object
+                  runtimeClassName:
+                    description: RuntimeClassName specifies the spec.runtimeClassName
+                      for workspace pods.
+                    type: string
                   secondsOfInactivityBeforeIdling:
                     default: 1800
                     description: |-
