ci: Add new 7.92.0 bundle to a catalog
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -89,3 +89,5 @@ entries:
     replaces: eclipse-che.v7.89.0
   - name: eclipse-che.v7.91.0
     replaces: eclipse-che.v7.90.0
+  - name: eclipse-che.v7.92.0
+    replaces: eclipse-che.v7.91.0
