ci: Release editors definitions to 7.93.0
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/editors-definitions/che-code-latest.yaml
+++ b/editors-definitions/che-code-latest.yaml
@@ -81,7 +81,7 @@ events:
 components:
   - name: che-code-injector
     container:
-      image: quay.io/che-incubator/che-code:latest
+      image: quay.io/che-incubator/che-code:7.93.0
       command:
         - /entrypoint-init-container.sh
       volumeMounts:
