ci: Add new 7.93.0 bundle to a catalog
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -91,3 +91,5 @@ entries:
     replaces: eclipse-che.v7.90.0
   - name: eclipse-che.v7.92.0
     replaces: eclipse-che.v7.91.0
+  - name: eclipse-che.v7.93.0
+    replaces: eclipse-che.v7.92.0
