Update dev resources
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -5373,7 +5373,7 @@ spec:
                     type: object
                   defaultComponents:
                     description: |-
-                      Default components applied to 1spaces.
+                      Default components applied to DevWorkspaces.
                       These default components are meant to be used when a Devfile, that does not contain any components.
                     items:
                       properties:
