--- a/editors-definitions/che-idea-server-latest.yaml
+++ b/editors-definitions/che-idea-server-latest.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2019-2024 Red Hat, Inc.
+# Copyright (c) 2024 Red Hat, Inc.
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
@@ -13,7 +13,7 @@
 schemaVersion: 2.2.2
 metadata:
   name: che-idea-server
-  displayName: IntelliJ IDEA Ultimate (desktop)
+  displayName: Jet Brains IntelliJ IDEA Ultimate (desktop)
   description: JetBrains IntelliJ IDEA Ultimate dev server for Eclipse Che - latest
   tags:
     - Tech-Preview
