--- a/editors-definitions/che-pycharm-server-latest.yaml
+++ b/editors-definitions/che-pycharm-server-latest.yaml
@@ -13,14 +13,14 @@
 schemaVersion: 2.2.2
 metadata:
   name: che-pycharm-server
-  displayName: PyCharm (desktop)
-  description: JetBrains PyCharm for Eclipse Che - latest
+  displayName: Jet Brains PyCharm Professional Edition (desktop)
+  description: JetBrains PyCharm Professional Edition for Eclipse Che - latest
   tags:
     - Tech-Preview
   attributes:
     publisher: che-incubator
     version: latest
-    title: JetBrains PyCharm for Eclipse Che - latest
+    title: JetBrains PyCharm Professional Edition for Eclipse Che - latest
     repository: https://github.com/che-incubator/che-idea-dev-server
     firstPublicationDate: '2024-18-09'
     iconMediatype: image/svg+xml
