Mention an IDE version in dispalyName
Signed-off-by: Artem Zatsarynnyi <azatsary@redhat.com>

--- a/editors-definitions/che-idea-server-latest.yaml
+++ b/editors-definitions/che-idea-server-latest.yaml
@@ -13,13 +13,13 @@
 schemaVersion: 2.2.2
 metadata:
   name: che-idea-server
-  displayName: Jet Brains IntelliJ IDEA Ultimate (desktop)
+  displayName: Jet Brains IntelliJ IDEA Ultimate 2024.2.3 (desktop)
   description: JetBrains IntelliJ IDEA Ultimate dev server for Eclipse Che - latest
   tags:
     - Tech-Preview
   attributes:
     publisher: che-incubator
-    version: latest (2024.2.3)
+    version: latest
     provider: Provided by [Jet Brains](https://www.jetbrains.com/) under [License](https://www.jetbrains.com/legal/docs/toolbox/user/)
     title: JetBrains IntelliJ IDEA Ultimate dev server for Eclipse Che - latest
     repository: https://github.com/che-incubator/che-idea-dev-server
