--- a/editors-definitions/che-pycharm-server-next.yaml
+++ b/editors-definitions/che-pycharm-server-next.yaml
@@ -13,13 +13,13 @@
 schemaVersion: 2.2.2
 metadata:
   name: che-pycharm-server
-  displayName: Jet Brains PyCharm Professional Edition (desktop)
+  displayName: Jet Brains PyCharm Professional Edition 2024.2.3 (desktop)
   description: JetBrains PyCharm Professional Edition for Eclipse Che - next
   tags:
     - Tech-Preview
   attributes:
     publisher: che-incubator
-    version: next (2024.2.3)
+    version: next
     provider: Provided by [Jet Brains](https://www.jetbrains.com/) under [License](https://www.jetbrains.com/legal/docs/toolbox/user/)
     title: JetBrains PyCharm Professional Edition for Eclipse Che - next
     repository: https://github.com/che-incubator/che-idea-dev-server
