--- a/editors-definitions/che-idea-server-next.yaml
+++ b/editors-definitions/che-idea-server-next.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2019-2024 Red Hat, Inc.
+# Copyright (c) 2024 Red Hat, Inc.
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
@@ -13,13 +13,14 @@
 schemaVersion: 2.2.2
 metadata:
   name: che-idea-server
-  displayName: IntelliJ IDEA Ultimate (desktop)
+  displayName: Jet Brains IntelliJ IDEA Ultimate (desktop) 2024.2.3
   description: JetBrains IntelliJ IDEA Ultimate dev server for Eclipse Che - next
   tags:
     - Tech-Preview
   attributes:
     publisher: che-incubator
     version: next
+    provider: Provided by [Jet Brains](https://www.jetbrains.com/) under [License](https://www.jetbrains.com/legal/docs/toolbox/user/)
     title: JetBrains IntelliJ IDEA Ultimate dev server for Eclipse Che - next
     repository: https://github.com/che-incubator/che-idea-dev-server
     firstPublicationDate: '2023-30-11'
