--- a/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -104,7 +104,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che.v7.94.0-891.next
+  name: eclipse-che.v7.94.0-892.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -828,7 +828,33 @@ spec:
               resources:
                 - limitranges
               verbs:
+                - create
+                - delete
+                - get
+                - update
+                - patch
+                - watch
                 - list
+            - apiGroups:
+                - ""
+              resources:
+                - resourcequotas
+              verbs:
+                - create
+                - delete
+                - get
+                - update
+                - patch
+                - watch
+                - list
+            - apiGroups:
+                - template.openshift.io
+              resources:
+                - templates
+              verbs:
+                - get
+                - list
+                - watch
             - apiGroups:
                 - monitoring.coreos.com
               resources:
@@ -1035,7 +1061,7 @@ spec:
   minKubeVersion: 1.19.0
   provider:
     name: Eclipse Foundation
-  version: 7.94.0-891.next
+  version: 7.94.0-892.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
