--- a/editors-definitions/che-clion-server-latest.yaml
+++ b/editors-definitions/che-clion-server-latest.yaml
@@ -21,7 +21,7 @@ metadata:
     publisher: che-incubator
     version: latest
     provider: Provided by [Jet Brains](https://www.jetbrains.com/) under [License](https://www.jetbrains.com/legal/docs/toolbox/user/)
-    title: JetBrains WebStorm for Eclipse Che - latest
+    title: JetBrains CLion for Eclipse Che - latest
     repository: https://github.com/che-incubator/che-idea-dev-server
     firstPublicationDate: '2024-04-11'
     iconMediatype: image/svg+xml
