--- a/config/rbac/cluster_role.yaml
+++ b/config/rbac/cluster_role.yaml
@@ -359,6 +359,18 @@ rules:
       - watch
       - list
   - apiGroups:
+      - networking.k8s.io
+    resources:
+      - networkpolicies
+    verbs:
+      - create
+      - delete
+      - get
+      - update
+      - patch
+      - watch
+      - list
+  - apiGroups:
       - template.openshift.io
     resources:
       - templates
